--- a/home.html
+++ b/home.html
@@ -8,9 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
-    .animate-fade-in {
-      animation: fadeIn 1.5s ease-in-out;
-    }
+    .animate-fade-in { animation: fadeIn 1.5s ease-in-out; }
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
@@ -19,7 +17,7 @@
 </head>
 <body class="bg-yellow-50 text-gray-900">
 
-<!-- Header with search bar inline -->
+<!-- Header -->
 <header class="bg-red-800 text-white py-4 px-6 flex items-center justify-between shadow-md">
   <h1 class="text-2xl font-bold">MajeeoNuts</h1>
   <nav class="space-x-6 text-sm">
@@ -30,16 +28,16 @@
   <input type="text" id="searchInput" placeholder="Search products..." class="ml-4 px-2 py-1 rounded border text-gray-900 border-gray-300 focus:outline-none focus:ring-2 focus:ring-red-600 text-sm" />
 </header>
 
-<!-- Hero Section with Video and Cart -->
+<!-- Hero Section -->
 <section class="max-w-7xl mx-auto mt-6 px-4 flex flex-col md:flex-row gap-6">
-  <!-- Video Left -->
+  <!-- Video -->
   <div class="w-full md:w-3/4 rounded-xl overflow-hidden shadow-lg">
-    <video class="w-full h-[400px] object-cover rounded-xl" controls>
+    <video class="w-full h-[300px] object-cover rounded-xl" controls>
       <source src="media/majeeoNuts_dryfruits_homepage_video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
-  <!-- Cart Right -->
+  <!-- Cart -->
   <aside class="bg-white rounded-xl shadow-md p-6 h-max md:w-1/4">
     <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
     <div id="cart-items" class="space-y-4 text-sm">
@@ -49,34 +47,42 @@
   </aside>
 </section>
 
-<!-- Product Section -->
-<div class="max-w-7xl mx-auto p-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-  <!-- Product 1 -->
-  <article class="bg-white rounded-xl shadow-md p-4">
-    <h2 class="text-md font-semibold mb-2">Premium Almonds (Badam)</h2>
-    <img src="images/almonds.webp" alt="Premium Almonds" class="h-32 w-full object-cover rounded mb-2" />
-    <p class="text-red-700 font-bold mb-2">₹1000/kg</p>
-    <p class="text-sm text-gray-700 mb-2">High-quality California almonds, rich in antioxidants and healthy fats.</p>
-    <select class="p-2 border rounded mb-2 quantity-select">
-      <option value="250">250g</option>
-      <option value="500">500g</option>
-      <option value="1000" selected>1kg</option>
-    </select>
-    <button class="add-to-cart w-full bg-red-600 text-white py-2 rounded" data-name="Almonds" data-price-per-kg="1000">Add to Cart</button>
-  </article>
-  <!-- Product 2 -->
-  <article class="bg-white rounded-xl shadow-md p-4">
-    <h2 class="text-md font-semibold mb-2">Premium Cashews (Kaju)</h2>
-    <img src="images/cashews.avif" alt="Premium Cashews" class="h-32 w-full object-cover rounded mb-2" />
-    <p class="text-red-700 font-bold mb-2">₹1200/kg</p>
-    <p class="text-sm text-gray-700 mb-2">Fresh, creamy cashews packed with protein and essential minerals.</p>
-    <select class="p-2 border rounded mb-2 quantity-select">
-      <option value="250">250g</option>
-      <option value="500">500g</option>
-      <option value="1000" selected>1kg</option>
-    </select>
-    <button class="add-to-cart w-full bg-red-600 text-white py-2 rounded" data-name="Cashews" data-price-per-kg="1200">Add to Cart</button>
-  </article>
+<!-- Product Grid -->
+<div class="max-w-7xl mx-auto p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 text-sm">
+
+  <!-- Template product format -->
+  <script>
+    const products = [
+      { name: "Premium Almonds (Badam)", img: "images/almonds.webp", price: 1000, desc: "High-quality California almonds, rich in antioxidants and healthy fats." },
+      { name: "Premium Cashews (Kaju)", img: "images/cashews.avif", price: 1200, desc: "Fresh, creamy cashews packed with protein and essential minerals." },
+      { name: "Mamra Almonds (Organic)", img: "images/mamra_almonds.webp", price: 1600, desc: "Premium organic Mamra almonds for extra crunch and health." },
+      { name: "Pista (Pistachios)", img: "images/Pista.jpg", price: 1400, desc: "Crunchy, lightly salted pistachios packed with flavor and nutrition." },
+      { name: "Walnut (Akhrot)", img: "images/Walnut.png", price: 1300, desc: "Brain-boosting walnuts rich in Omega-3 and antioxidants." },
+      { name: "Raisins (Kishmish)", img: "images/Raisins.png", price: 600, desc: "Sweet, sun-dried raisins full of natural sugars and fiber." },
+      { name: "Mix Dry Fruits", img: "images/MixDryFruits.jpg", price: 1500, desc: "A perfect mix of almonds, cashews, pista, raisins and figs." },
+      { name: "Anjeer (Figs)", img: "images/Anjeer.png", price: 900, desc: "Naturally sweet sun-dried figs, rich in fiber and iron." }
+    ];
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const container = document.querySelector(".grid");
+      products.forEach(p => {
+        const html = `
+        <article class="bg-white rounded-lg shadow p-3">
+          <h2 class="font-semibold mb-1 text-base">${p.name}</h2>
+          <img src="${p.img}" alt="${p.name}" class="h-28 w-full object-cover rounded mb-1" />
+          <p class="text-red-700 font-bold mb-1">₹${p.price}/kg</p>
+          <p class="text-gray-700 mb-1">${p.desc}</p>
+          <select class="p-1 border rounded mb-2 quantity-select text-sm">
+            <option value="250">250g</option>
+            <option value="500">500g</option>
+            <option value="1000" selected>1kg</option>
+          </select>
+          <button class="add-to-cart w-full bg-red-600 text-white py-1 rounded" data-name="${p.name}" data-price-per-kg="${p.price}">Add to Cart</button>
+        </article>`;
+        container.insertAdjacentHTML("beforeend", html);
+      });
+    });
+  </script>
 </div>
 
 <!-- Footer -->
@@ -117,7 +123,7 @@
   </div>
 </footer>
 
-<!-- Razorpay Checkout -->
+<!-- Razorpay + Cart -->
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
   const cart = [];
@@ -151,15 +157,15 @@
     renderCart();
   }
 
-  document.querySelectorAll(".add-to-cart").forEach(button => {
-    button.addEventListener("click", () => {
-      const name = button.dataset.name;
-      const pricePerKg = parseInt(button.dataset.pricePerKg);
-      const grams = parseInt(button.parentElement.querySelector(".quantity-select").value);
+  document.addEventListener("click", function (e) {
+    if (e.target.classList.contains("add-to-cart")) {
+      const name = e.target.dataset.name;
+      const pricePerKg = parseInt(e.target.dataset.pricePerKg);
+      const grams = parseInt(e.target.previousElementSibling.value);
       const price = (pricePerKg / 1000) * grams;
       cart.push({ name, grams, price });
       renderCart();
-    });
+    }
   });
 
   checkoutBtn.addEventListener("click", () => {
@@ -178,9 +184,7 @@
       prefill: {
         email: "maheshgawade7799@gmail.com"
       },
-      theme: {
-        color: "#b91c1c" // red-700
-      }
+      theme: { color: "#b91c1c" }
     };
     const rzp = new Razorpay(options);
     rzp.open();
@@ -189,15 +193,14 @@
   renderCart();
 </script>
 
+<!-- Search Filter -->
 <script>
   const searchInput = document.getElementById("searchInput");
-  const products = document.querySelectorAll("main article, div article");
-
   searchInput.addEventListener("input", () => {
     const query = searchInput.value.toLowerCase();
-    products.forEach(product => {
-      const productName = product.querySelector("h2").innerText.toLowerCase();
-      product.style.display = productName.includes(query) ? "block" : "none";
+    document.querySelectorAll("article").forEach(article => {
+      const name = article.querySelector("h2").innerText.toLowerCase();
+      article.style.display = name.includes(query) ? "block" : "none";
     });
   });
 </script>
