--- a/premium-almonds.html
+++ b/premium-almonds.html
@@ -2,101 +2,105 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Premium Jumbo Almonds | MajeeoNuts</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Premium Almonds (Badam) - MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #e0f2fe; /* sky blue */
-      color: #1e293b; /* dark slate */
     }
   </style>
 </head>
-<body>
+<body class="bg-sky-100 text-gray-800 text-sm">
 
-<header class="bg-red-800 text-white p-4 flex justify-between items-center">
+<!-- Header -->
+<header class="bg-red-800 text-white py-3 px-4 flex items-center justify-between shadow-md">
   <h1 class="text-xl font-bold">MajeeoNuts</h1>
-  <nav class="space-x-6 text-sm">
+  <nav class="space-x-4">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
     <a href="contact.html" class="hover:underline">Contact Us</a>
   </nav>
 </header>
 
-<main class="max-w-6xl mx-auto my-8 px-4 grid grid-cols-1 md:grid-cols-2 gap-8">
+<!-- Product Section -->
+<section class="max-w-6xl mx-auto mt-6 p-4 grid grid-cols-1 md:grid-cols-2 gap-6">
+  <!-- Left: Image and Name -->
+  <div class="bg-white p-4 rounded-lg shadow">
+    <img src="images/almonds.webp" alt="Premium Almonds" class="w-full aspect-square object-cover rounded mb-3" />
+    <h2 class="text-lg font-semibold mb-1">Premium Almonds (Badam)</h2>
+    <p class="text-gray-600 mb-1">100 gram</p>
+    <p class="text-red-700 font-bold text-base">₹124.00</p>
+  </div>
 
-  <!-- Left Side: Image, Name, Quantity -->
-  <section class="bg-white rounded-lg shadow p-6 flex flex-col items-center">
-    <img src="images/almonds.webp" alt="Premium Jumbo Almonds" class="w-64 h-64 object-cover rounded mb-4" />
-    <h2 class="text-2xl font-semibold mb-1">Premium Jumbo Almond</h2>
-    <p class="text-lg font-medium mb-3">100 gram</p>
-  </section>
+  <!-- Right: Details -->
+  <div class="bg-white p-4 rounded-lg shadow space-y-3">
+    <p><strong>Swift Delivery</strong> - Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are! <em>(Chat with us)</em></p>
 
-  <!-- Right Side: Details -->
-  <section class="bg-white rounded-lg shadow p-6 flex flex-col space-y-4">
-    <p class="text-xl font-bold text-red-700">₹124.00</p>
-    <p class="italic">Swift Delivery - Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are! (Chat with us)</p>
-
-    <ul class="list-disc list-inside space-y-1 text-gray-700">
+    <ul class="list-disc list-inside text-gray-700">
       <li>Healthy Heart</li>
       <li>High Nutrition</li>
       <li>Gluten Free</li>
       <li>Cholesterol Free</li>
     </ul>
 
-    <div class="flex space-x-4">
-      <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="px-4 py-2 bg-green-500 text-white rounded shadow hover:bg-green-600 text-sm">WhatsApp Us</a>
-      <a href="tel:+917483600212" class="px-4 py-2 bg-blue-600 text-white rounded shadow hover:bg-blue-700 text-sm">Call Us</a>
+    <div class="mt-3">
+      <button class="bg-green-600 text-white px-3 py-1 rounded text-sm mr-2">WhatsApp Us</button>
+      <button class="bg-blue-600 text-white px-3 py-1 rounded text-sm">Call Us</button>
     </div>
 
-    <p class="text-xs text-gray-500">SKU: DRYF101</p>
+    <p class="mt-2 text-gray-500 text-xs">SKU: DRYF101</p>
 
-    <h3 class="text-lg font-semibold mt-4">Description:</h3>
-    <p>Jumbo Almonds are rich in Qualities and benefits. Jumbo almonds help in reducing hunger and reduce calorie intake. These almonds can be used to extract oil and milk. Jumbo almonds are long in nature and a bit sweeter.</p>
+    <div class="mt-4">
+      <h3 class="text-base font-semibold mb-1">Description:</h3>
+      <p class="text-gray-700">
+        Jumbo Almonds are rich in qualities and benefits. They help in reducing hunger and calorie intake. These almonds can be used to extract oil and milk. They are long in size and slightly sweeter in taste.
+      </p>
+    </div>
 
-    <h3 class="text-lg font-semibold mt-4">Benefits</h3>
-    <p>
-      Premium Jumbo Almond is a premium selection of the finest, largest, and most flavorful almonds, carefully sourced to deliver an unparalleled snacking experience. These jumbo-sized almonds boast a rich, nutty flavor and a delightfully crunchy texture that sets them apart from ordinary almonds.<br><br>
-      Ideal for health-conscious individuals, enjoy them as a wholesome snack, incorporate into meals, or use to elevate desserts and baked goods with their exquisite taste and texture. Perfect for energy boost, midday pick-me-up, or a luxurious touch to culinary creations.<br><br>
-      With premium quality and natural flavor, these almonds embody the best nature offers, making every bite satisfying and nourishing.
-    </p>
-  </section>
-</main>
+    <div class="mt-4">
+      <h3 class="text-base font-semibold mb-1">Benefits:</h3>
+      <p class="text-gray-700">
+        Almond Jumbo is a premium selection of the finest, largest, and most flavorful almonds. Ideal for health-conscious individuals. Enjoy as a snack or add to your meals and desserts. Rich in nutrients and texture.
+      </p>
+    </div>
+  </div>
+</section>
 
 <!-- Footer -->
-<footer class="bg-white border-t mt-16 py-6">
-  <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-4 gap-6 text-xs text-gray-600">
-    <div>
-      <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2" />
-      <p>Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
-    </div>
-    <div>
-      <h4 class="font-semibold mb-1 text-gray-800">Quick Links</h4>
-      <ul class="space-y-1">
-        <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
-        <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
-        <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
-        <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
-      </ul>
-    </div>
-    <div>
-      <h4 class="font-semibold mb-1 text-gray-800">Account Info</h4>
-      <ul class="space-y-1">
-        <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-        <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-        <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-        <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
-      </ul>
-    </div>
-    <div>
-      <h4 class="font-semibold mb-1 text-gray-800">Contact Details</h4>
-      <ul class="space-y-1">
-        <li>📍 Mumbai, India</li>
-        <li>✉️ maheshgawade7799@gmail.com</li>
-        <li>📞 +91-7483600212</li>
-      </ul>
+<footer class="bg-white border-t mt-12">
+  <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-xs">
+      <div>
+        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
+        <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
+      </div>
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-1">Quick Links</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="about.html" class="hover:text-blue-600">About Us</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:text-blue-600">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:text-blue-600">Shopping</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
+          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
+          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="font-semibold text-gray-800 mb-1">Contact Details</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li>📍 Mumbai, India</li>
+          <li>✉️ maheshgawade7799@gmail.com</li>
+          <li>📞 +91-7483600212</li>
+        </ul>
+      </div>
     </div>
   </div>
 </footer>
