--- a/premium-almonds.html
+++ b/premium-almonds.html
@@ -5,72 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Premium Almonds (Badam) - MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
     }
   </style>
 </head>
-<body class="bg-sky-100 text-gray-800 text-sm">
+<body class="bg-sky-100 text-gray-800">
 
 <!-- Header -->
-<header class="bg-red-800 text-white py-3 px-4 flex items-center justify-between shadow-md">
+<header class="bg-red-800 text-white py-3 px-6 flex items-center justify-between shadow">
   <h1 class="text-xl font-bold">MajeeoNuts</h1>
-  <nav class="space-x-4">
+  <nav class="space-x-4 text-sm">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
     <a href="contact.html" class="hover:underline">Contact Us</a>
   </nav>
 </header>
 
-<!-- Product Section -->
-<section class="max-w-6xl mx-auto mt-6 p-4 grid grid-cols-1 md:grid-cols-2 gap-6">
-  <!-- Left: Image and Name -->
-  <div class="bg-white p-4 rounded-lg shadow">
-    <img src="images/almonds.webp" alt="Premium Almonds" class="w-full aspect-square object-cover rounded mb-3" />
-    <h2 class="text-lg font-semibold mb-1">Premium Almonds (Badam)</h2>
-    <p class="text-gray-600 mb-1">100 gram</p>
-    <p class="text-red-700 font-bold text-base">₹124.00</p>
+<!-- Product Detail Section -->
+<section class="max-w-6xl mx-auto p-4 mt-6 grid grid-cols-1 md:grid-cols-2 gap-6">
+  <!-- Image & Basic Info -->
+  <div>
+    <img src="images/almonds.webp" alt="Premium Almonds (Badam)" class="rounded shadow mb-4 w-full aspect-square object-cover"/>
+    <h2 class="text-2xl font-bold mb-2">Premium Almonds (Badam)</h2>
+    <p class="text-sm text-gray-600 mb-1">100 gram</p>
+    <p class="text-red-700 font-bold text-lg mb-3">₹124.00</p>
   </div>
 
-  <!-- Right: Details -->
-  <div class="bg-white p-4 rounded-lg shadow space-y-3">
-    <p><strong>Swift Delivery</strong> - Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are! <em>(Chat with us)</em></p>
-
-    <ul class="list-disc list-inside text-gray-700">
+  <!-- Product Details -->
+  <div class="text-sm space-y-3">
+    <p><strong>Swift Delivery:</strong> Shipping Across India. Bringing the goodness of dry fruits to your doorstep, no matter where you are! (Chat with us)</p>
+    <ul class="list-disc ml-6 text-gray-700">
       <li>Healthy Heart</li>
       <li>High Nutrition</li>
       <li>Gluten Free</li>
       <li>Cholesterol Free</li>
     </ul>
-
-    <div class="mt-3">
-      <button class="bg-green-600 text-white px-3 py-1 rounded text-sm mr-2">WhatsApp Us</button>
-      <button class="bg-blue-600 text-white px-3 py-1 rounded text-sm">Call Us</button>
+    <div class="flex gap-3 mt-4">
+      <a href="https://wa.me/917483600212" class="bg-green-600 text-white px-3 py-1 rounded text-xs">WhatsApp Us</a>
+      <a href="tel:+917483600212" class="bg-blue-600 text-white px-3 py-1 rounded text-xs">Call Us</a>
     </div>
+    <p class="mt-2 text-gray-600">SKU: <strong>DRYF101</strong></p>
 
-    <p class="mt-2 text-gray-500 text-xs">SKU: DRYF101</p>
+    <hr class="my-4"/>
 
-    <div class="mt-4">
-      <h3 class="text-base font-semibold mb-1">Description:</h3>
-      <p class="text-gray-700">
-        Jumbo Almonds are rich in qualities and benefits. They help in reducing hunger and calorie intake. These almonds can be used to extract oil and milk. They are long in size and slightly sweeter in taste.
-      </p>
-    </div>
+    <h3 class="font-semibold text-base">Description</h3>
+    <p class="text-gray-700 leading-relaxed">
+      Jumbo Almonds are rich in qualities and benefits. They help in reducing hunger and lower calorie intake. These almonds are also used to extract oil and milk. Jumbo Almonds are long in nature and have a touch of extra sweetness.
+    </p>
 
-    <div class="mt-4">
-      <h3 class="text-base font-semibold mb-1">Benefits:</h3>
-      <p class="text-gray-700">
-        Almond Jumbo is a premium selection of the finest, largest, and most flavorful almonds. Ideal for health-conscious individuals. Enjoy as a snack or add to your meals and desserts. Rich in nutrients and texture.
-      </p>
-    </div>
+    <h3 class="font-semibold text-base mt-4">Benefits</h3>
+    <p class="text-gray-700 leading-relaxed">
+      Almond Jumbo is a premium selection of the finest, largest, and most flavorful almonds. Carefully sourced for rich, nutty flavor and a crunchy texture, they're ideal for health-conscious individuals. Enjoy them as a snack, in meals, or desserts. They offer natural nutrition, a luxurious snacking experience, and are perfect for a healthy lifestyle.
+    </p>
   </div>
 </section>
 
 <!-- Footer -->
-<footer class="bg-white border-t mt-12">
+<footer class="bg-white border-t mt-12 text-xs">
   <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
-    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6 text-xs">
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
       <div>
         <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
         <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
@@ -85,25 +81,4 @@
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Account Info</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li><a href="account.html" class="hover:text-blue-600">My Account</a></li>
-          <li><a href="privacy.html" class="hover:text-blue-600">Privacy Policy</a></li>
-          <li><a href="return.html" class="hover:text-blue-600">Return Policy</a></li>
-          <li><a href="terms.html" class="hover:text-blue-600">Terms & Conditions</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="font-semibold text-gray-800 mb-1">Contact Details</h4>
-        <ul class="text-gray-600 space-y-1">
-          <li>📍 Mumbai, India</li>
-          <li>✉️ maheshgawade7799@gmail.com</li>
-          <li>📞 +91-7483600212</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
-
-</body>
-</html>
+        <h4 class="font-semibold text-gray-800 mb-1">Account In
